# gpu-kernels

./: .clangd  .gitignore  CMakeLists.txt
attention/: Untitled.ipynb  attention_test.cu  attention_triton.py  attention_v1_simple_fwd.cu  attention_v2_tensor_core_fwd.cu  attention_v2_triton.py  runner.cu
attention/src/: attention_v2_tensor_core_fwd.cu  flash_attention_v2 triton.ipynb
blackwell_helpers/: fence.cuh  mbarrier.cuh  others.cuh  tcgen05_mma.cuh  tcgen05_mov.cuh
include/: async_group.cuh  clc.cuh  fence.cuh  ldmatrix.cuh  mbarrier.cuh  mma_sync.cuh  others.cuh  tcgen05_mma.cuh  tcgen05_mov.cuh  tma.cuh
layer_norm/: CMakeLists.txt  Untitled.ipynb  compile_commands.json  layer_norm.cu  layer_norm_bench.py
layer_norm/src/: layer_norm_simple.cu  layer_norm_simple_async.cu  layer_norm_simple_dsmem.cu  layer_norm_simple_dsmem_async_v1.cu  layer_norm_simple_dsmem_async_v2.cu  layer_norm_simple_persistant.cu
matmul/blackwell_nvfp4/: CMakeLists.txt  block_scaled_nvfp4.cuh  check.py  get_trace.py  main.py  nvfp4_gemm.py  nvfp4_v1.cu  nvfp4_v2.cu  nvfp4_v3.cu  nvfp4_v4.cu  nvfp4_v5.cu  profiler.cuh  runner.cu
matmul/sm100_nvfp4/: CMakeLists.txt  block_scaled_nvfp4.cuh  main.py  nvfp4_v1.cu  nvfp4_v2.cu  nvfp4_v3.cu  nvfp4_v4.cu  nvfp4_v5.cu  profiler.cuh  runner.cu
matmul/sm120_nvfp4/: CMakeLists.txt  kernel_headers.cuh  kernel_v1.cu  kernel_v2.cu  kernel_v3.cu  kernel_v4.cu  kernel_v5.cu  kernel_v6.cu  kernel_v6_5.cu  kernel_v7.cu  kernel_v8.cu  kernel_v9.cu  kernels.cuh  nvfp4_gemm.py  nvfp4_v1.cu  nvfp4_v3.cu  nvfp4_v5.cu  nvfp4_v6.cu  nvfp4_v7.cu  runner.cu  sm120_helper.cuh
matmul/sm120_nvfp4/packed_warp/: nvfp4_v1.cu  nvfp4_v25.cu  nvfp4_v3.cu  nvfp4_v4.cu  nvfp4_v5.cu
matmul/sm120_nvfp4_rough/: CMakeLists.txt  kernels.cuh  nvfp4_v1.cu  nvfp4_v10.cu  nvfp4_v2.cu  nvfp4_v4.cu  nvfp4_v5.cu  nvfp4_v6.cu  nvfp4_v7.cu  nvfp4_v8.cu  nvfp4_v9.cu  runner.cu
matmul/sm120_nvfp4_rough/packed_warp_ignore/: nvfp4_v2.cu  nvfp4_v55.cu
